--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vlinked/utils",
+    "name": "vlinked/vlinked-utils",
     "description": "vlinked tools collection",
     "type": "library",
     "license": "MIT",
