--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     },
     "authors": [
         {
-            "name": "jrexe",
-            "email": "jrexejrexe@gmail.com"
+            "name": "jyj",
+            "email": "784910468@qq.com"
         }
     ],
     "require": {
